syntax = "proto3";

option java_package = "xyz.fiwka.cornservice.stub";
option java_multiple_files = true;

message RoastingRequest {
  string cornType = 1;
  int64 cornWeight = 2;
  string cornCountry = 3;
  int64 cornOutputWeight = 4;
  string teamId = 5;
}

message RoastingResponse {
  optional string message = 2;
}

service RoastingService {
  rpc SendRoastingData(RoastingRequest) returns (RoastingResponse);
}